--- a/3d/wedding_3d copy.html
+++ b/3d/wedding_3d copy.html
@@ -687,10 +687,11 @@
     }
 
 
-    .wedding3D .btn-WhiteGold,
-    .wedding3D .btn-YellowGold,
-    .wedding3D .btn-RoseGold,
-    .wedding3D .btn-Platinum {
+    .wedding3D .btn-white-gold,
+    .wedding3D .btn-yellow-gold,
+    .wedding3D .btn-rose-gold,
+    .wedding3D .btn-platinum {
+
       color: #000;
       min-width: 0;
       width: 30px;
@@ -701,23 +702,24 @@
       font-size: 10px;
       padding: 0;
       border-radius: 50%;
-      cursor: pointer;
 
     }
 
-    .btn-WhiteGold {
+
+
+    .btn-white-gold {
       border: 3px solid #d5d7d8;
     }
 
-    .btn-YellowGold {
+    .btn-yellow-gold {
       border: 3px solid #f1ca8b;
     }
 
-    .btn-RoseGold {
+    .btn-rose-gold {
       border: 3px solid #e2a79f;
     }
 
-    .btn-Platinum {
+    .btn-platinum {
       border: 3px solid #757575;
     }
 
@@ -733,12 +735,6 @@
       border: 1px solid var(--darkblue);
       /* font-weight: 500; */
     }
-
-    .wedding3D .btn-outer-border.active {
-      border: 1px solid var(--darkblue);
-      /* font-weight: 500; */
-    }
-
 
     .mt2021 .more {
       display: none;
@@ -985,21 +981,21 @@
 
               <div id="wbHighDome_3D"></div>
               <h3 class="my-4" id="wbHighDome_3DTitle">18K Gold</h3>
-              <div class="btn-color-group wbHighDome">
+              <div class="btn-color-group">
 
                 <div class="btn-outer-border">
-                  <div class="btn-WhiteGold" onclick="renderData(wbHighDome, 'wbHighDome', 'WhiteGold')">18K</div>
+                  <div class="btn-white-gold" onclick="renderData(wbHighDome, 'wbHighDome', 'WhiteGold')">18K</div>
                 </div>
 
                 <div class="btn-outer-border">
-                  <div class="btn-YellowGold" onclick="renderData(wbHighDome, 'wbHighDome', 'YellowGold')">18K
+                  <div class="btn-yellow-gold" onclick="renderData(wbHighDome, 'wbHighDome', 'YellowGold')">18K
                   </div>
                 </div>
                 <div class="btn-outer-border">
-                  <div class="btn-RoseGold" onclick="renderData(wbHighDome, 'wbHighDome', 'RoseGold')">18K</div>
+                  <div class="btn-rose-gold" onclick="renderData(wbHighDome, 'wbHighDome', 'RoseGold')">18K</div>
                 </div>
                 <div class="btn-outer-border">
-                  <div class="btn-Platinum" onclick="renderData(wbHighDome, 'wbHighDome', 'Platinum')">PT</div>
+                  <div class="btn-platinum" onclick="renderData(wbHighDome, 'wbHighDome', 'Platinum')">PT</div>
                 </div>
 
               </div>
@@ -1058,18 +1054,18 @@
 
               <div id="wbLowDome_3D"></div>
               <h3 class="my-4" id="wbLowDome_3DTitle">18K Gold</h3>
-              <div class="btn-color-group wbLowDome">
+              <div class="btn-color-group">
                 <div class="btn-outer-border">
-                  <div class="btn-WhiteGold" onclick="renderData(wbLowDome, 'wbLowDome', 'WhiteGold')">18K</div>
+                  <div class="btn-white-gold" onclick="renderData(wbLowDome, 'wbLowDome', 'WhiteGold')">18K</div>
                 </div>
                 <div class="btn-outer-border">
-                  <div class="btn-YellowGold" onclick="renderData(wbLowDome, 'wbLowDome', 'YellowGold')">18K</div>
+                  <div class="btn-yellow-gold" onclick="renderData(wbLowDome, 'wbLowDome', 'YellowGold')">18K</div>
                 </div>
                 <div class="btn-outer-border">
-                  <div class="btn-RoseGold" onclick="renderData(wbLowDome, 'wbLowDome', 'RoseGold')">18K</div>
+                  <div class="btn-rose-gold" onclick="renderData(wbLowDome, 'wbLowDome', 'RoseGold')">18K</div>
                 </div>
                 <div class="btn-outer-border">
-                  <div class="btn-Platinum" onclick="renderData(wbLowDome, 'wbLowDome', 'Platinum')">PT</div>
+                  <div class="btn-platinum" onclick="renderData(wbLowDome, 'wbLowDome', 'Platinum')">PT</div>
                 </div>
               </div>
 
@@ -1123,19 +1119,19 @@
 
               <div id="wbFlatDome_3D"></div>
               <h3 class="my-4" id="wbFlatDome_3DTitle">18K Gold</h3>
-              <div class="btn-color-group wbFlatDome">
+              <div class="btn-color-group">
                 <div class="btn-outer-border">
-                  <div class="btn-WhiteGold" onclick="renderData(wbFlatDome, 'wbFlatDome', 'WhiteGold')">18K</div>
+                  <div class="btn-white-gold" onclick="renderData(wbFlatDome, 'wbFlatDome', 'WhiteGold')">18K</div>
                 </div>
                 <div class="btn-outer-border">
-                  <div class="btn-YellowGold" onclick="renderData(wbFlatDome, 'wbFlatDome', 'YellowGold')">18K
+                  <div class="btn-yellow-gold" onclick="renderData(wbFlatDome, 'wbFlatDome', 'YellowGold')">18K
                   </div>
                 </div>
                 <div class="btn-outer-border">
-                  <div class="btn-RoseGold" onclick="renderData(wbFlatDome, 'wbFlatDome', 'RoseGold')">18K</div>
+                  <div class="btn-rose-gold" onclick="renderData(wbFlatDome, 'wbFlatDome', 'RoseGold')">18K</div>
                 </div>
                 <div class="btn-outer-border">
-                  <div class="btn-Platinum" onclick="renderData(wbFlatDome, 'wbFlatDome', 'Platinum')">PT</div>
+                  <div class="btn-platinum" onclick="renderData(wbFlatDome, 'wbFlatDome', 'Platinum')">PT</div>
                 </div>
               </div>
 
@@ -2095,9 +2091,8 @@ template="Michaeltrio_Catalog::product/embed-product.phtml" varSkus="WR0003-8MM-
     };
 
 
-
     function renderData(domeType, id, color) {
-
+      activeColorChange(color);
       let domeURL = "";
       let id_3D = `${id}_3D`;
       let id_3DTitle = `${id}_3DTitle`;
@@ -2127,19 +2122,13 @@ template="Michaeltrio_Catalog::product/embed-product.phtml" varSkus="WR0003-8MM-
       document.getElementById(id).innerHTML = data;
       document.getElementById(id_3D).innerHTML = domeURL;
       document.getElementById(id_3DTitle).innerHTML = dome3DTitle[id][color];
-      setActiveBtn(id, color);
 
 
     }
 
-    function setActiveBtn(id, color) {
-      const btnGroup = document.querySelector(`.${id}`);
-      const allBtn = btnGroup.querySelectorAll('.btn-outer-border');
-      for (const btn of allBtn) {
-        btn.classList.remove('active');
-      }
 
-      btnGroup.querySelector(`.btn-${color}`).closest('.btn-outer-border').classList.add('active');
+    function activeColorChange(color) {
+      console.log(this);
     }
 
     const readMore = document.getElementsByClassName('read-more');
