--- a/content_pages/contact.html
+++ b/content_pages/contact.html
@@ -730,8 +730,9 @@
                                 <h6 class="font-weight-bold text-brown">TANJONG PAGAR</h6>
                                 <p class="py-3 h9">91 Tanjong Pagar Road<br />
                                     Singapore 088512<br />
-                                    Monday - Sunday: 12pm - 8.30pm<br />
-                                    (Last appointment at 7:30pm)</p>
+                                    Monday - Sunday: 12pm - 8.30pm
+
+                                </p>
 
                                 <p class="h9">
                                     Call: <a href="tel:+6562990110"> +65 6299 0110</a>
@@ -739,15 +740,18 @@
 
                                     Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
                                 </p>
+                                <div class="h13"> *Last appointment will be 1 hour before closing!
+                                </div>
                             </div>
                             <div class="mb-5">
                                 <h6 class="font-weight-bold text-brown">JEM</h6>
                                 <p class="py-3 h9">50 Jurong Gateway Road, #01-60, <br />
                                     Singapore 608549 <br />
                                     Monday - Thursday: 11am - 9pm <br />
-                                    (Last appointment at 8pm) <br />
-                                    Friday - Sunday: 11am - 9.30pm <br />
-                                    (Last appointment at 8.30pm)</p>
+
+                                    Friday - Sunday: 11am - 9.30pm
+
+                                </p>
 
                                 <p class="h9">
                                     Call: <a href="tel:+6569513296"> +65 6951 3296</a>
@@ -756,6 +760,8 @@
                                     Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
 
                                 </p>
+                                <div class="h13"> *Last appointment will be 1 hour before closing!
+                                </div>
                             </div>
                             <div class="mb-5">
                                 <h6 class="font-weight-bold text-brown">NORTHPOINT CITY</h6>
@@ -763,9 +769,9 @@
                                     Yishun Avenue 2, North Wing, #01-22 Northpoint City <br />
                                     Singapore 769098 <br />
                                     Monday - Thursday: 11am - 9pm <br />
-                                    (Last appointment at 8pm) <br />
+
                                     Friday - Sunday: 11am - 9.30pm <br />
-                                    (Last appointment at 8.30pm)
+
                                 </p>
 
                                 <p class="h9">
@@ -776,6 +782,8 @@
 
 
                                 </p>
+                                <div class="h13"> *Last appointment will be 1 hour before closing!
+                                </div>
                             </div>
                             <div class="mb-5">
                                 <p class="h9"> Priority give to appointment*</p>
