--- a/landing_pages/diamond.html
+++ b/landing_pages/diamond.html
@@ -711,7 +711,7 @@
     }
 
     .slider-desc-box {
-      height: 130px;
+      /* height: 130px; */
       max-width: 600px;
       margin: auto;
     }
@@ -722,6 +722,7 @@
 
     p#diamond-desc-text {
       font-weight: 400;
+      padding: 0 10px;
     }
 
     .max-width-480 {
@@ -731,7 +732,7 @@
 
     @media (max-width: 1199.98px) {
       .slider-desc-box {
-        height: 140px;
+        /* height: 140px; */
       }
     }
 
@@ -747,7 +748,8 @@
       }
 
       .slider-desc-box {
-        height: 180px;
+        /* height: 180px; */
+        height: auto;
       }
 
       .diamond-by-shape #diamonds-slider.owl-carousel .owl-nav .owl-prev {
@@ -819,7 +821,7 @@
     </section>
 
 
-    <section class="diamond-by-shape py-5">
+    <section class="diamond-by-shape pt-5 pb-3">
 
       <div class="container ">
         <div class="row">
@@ -1129,7 +1131,7 @@
               <a href="{{store url='loose-diamonds/all-diamonds'}}" class="btn btn-blue large-btn mb-2"
                 role="button">Start
                 with a Diamond </a>
-              <a href="{{store url='engagement-rings/setting'}}" class="btn btn-blue large-btn " role="button">Start
+              <a href="{{store url='engagement-rings/setting'}}" class="btn btn-blue large-btn mb-2" role="button">Start
                 with a Setting </a>
             </div>
           </div>
