--- a/landing_pages/home_my.html
+++ b/landing_pages/home_my.html
@@ -334,8 +334,6 @@
                 font-size: 12px;
             }
 
-
-
         }
 
 
@@ -413,8 +411,6 @@
             .perfect-fit-bg {
                 background: linear-gradient(175.67deg, #F5F5F5 -9.43%, #C4C4C4 -9.42%, rgba(205, 205, 205, 0) 95.82%);
             }
-
-
 
 
         }
@@ -782,19 +778,6 @@
             padding: 0;
         }
 
-        @media (max-width: 1199.98px) {
-
-
-            #choose-setting.owl-carousel .owl-item img {
-                width: 150px;
-            }
-
-            #choose-setting.owl-carousel .owl-item.center img {
-                width: 235px;
-            }
-
-        }
-
         @media (max-width: 991.98px) {
             .home-jewel::before {
                 font-size: 7rem;
@@ -804,13 +787,6 @@
 
 
         @media (max-width: 767.98px) {
-            #choose-setting.owl-carousel .owl-item {
-                height: 270px;
-            }
-
-            #create-your-own-engagement.owl-carousel .owl-item img {
-                transition: unset;
-            }
 
             .home-jem-bg,
             .home-tanjong-bg,
@@ -883,14 +859,6 @@
             .home-jewel::before {
                 font-size: 3.5rem;
                 top: -56px;
-            }
-
-            #choose-setting.owl-carousel .owl-item {
-                height: auto;
-            }
-
-            #create-your-own-engagement.owl-carousel .owl-item {
-                margin: 0;
             }
         }
 
@@ -1150,9 +1118,9 @@
         </section>
 
 
-        <section class="bg-lighterorange pt-5">
+        <section class="bg-lighterorange py-5">
             <div class="container">
-                <h1 class="text-center mb-0">Wedding Bands</h1>
+                <h1 class="text-center">Wedding Bands</h1>
 
                 <div class="row py-5">
                     <div class="col-sm-12">
@@ -1186,9 +1154,13 @@
 
         <section class="py-5">
             <div class="container">
-                <h1 class="text-center">
-                    Michael Trio Customer Reviews
+                <h1 class="text-center">Michael Trio Customer Reviews
                 </h1>
+                <script type="2be3af30c4ebe8ae256e7cf8-text/javascript">
+                    (function e(){var e=document.createElement("script");e.type="text/javascript",e.async=!0,
+                        e.src="//staticw2.yotpo.com/Pf4mum3dma17hPNCwyFZDDWIR26Rky9wK2lYdRwI/widget.js";var t=document.getElementsByTagName("script")[0];
+                        t.parentNode.insertBefore(e,t)})();
+                    </script>
                 <div style="margin-top: 30px;margin-bottom: 50px;" class="yotpo yotpo-reviews-carousel"
                     data-background-color="transparent" data-mode="most_recent" data-type="product" data-count="9"
                     data-show-bottomline="1" data-autoplay-enabled="1" data-autoplay-speed="3000"
@@ -1196,10 +1168,6 @@
                     data-header-customisation-text="Read what our happy customers have been saying!">
 
                 </div>
-
-
-
-
             </div>
         </section>
 
@@ -1502,17 +1470,16 @@
                             <p class="mb-2">
                                 91 Tanjong Pagar Road S088512 </p>
 
-                            <p class="mb-2"> Monday - Sunday: 12pm - 8.30pm
+                            <p class="mb-2"> Monday - Sunday: 12pm - 8.30pm<br />
+                                <span class="h9"> (Last appointment at 7:30pm) </span>
                             </p>
 
                             <p class="mb-3">
                                 Call: <a href="tel:+6562990110">+65 62990110</a>
                             </p>
                             <a href="{{store url='make-an-appointment?location=tp'}}"
-                                class="btn btn-blue small-btn mb-3">Book
+                                class="btn btn-blue small-btn">Book
                                 Now</a>
-                            <div class="h13"> *Last appointment will be 1 hour before closing!
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -1530,20 +1497,20 @@
                                 50 Jurong Gateway Rd, #01-60,<br />
                                 S608549</p>
 
-                            <p class="mb-2"> Monday - Thursday: 11am - 9pm
+                            <p class="mb-2"> Monday - Thursday: 11am - 9pm<br />
+                                <span class="h9"> (Last appointment at 8pm) </span>
                             </p>
 
-                            <p class="mb-2"> Friday - Sunday: 11am - 9.30pm
+                            <p class="mb-2"> Friday - Sunday: 11am - 9.30pm<br />
+                                <span class="h9"> (Last appointment at 8.30pm) </span>
                             </p>
 
                             <p class="mb-3">
                                 Call: <a href="tel:+6569513296">+65 6951 3296</a>
                             </p>
                             <a href="{{store url='make-an-appointment?location=jem'}}"
-                                class="btn btn-blue small-btn mb-3">Book
+                                class="btn btn-blue small-btn">Book
                                 Now</a>
-                            <div class="h13"> *Last appointment will be 1 hour before closing!
-                            </div>
                         </div>
                     </div>
                     <div class="col-sm-12 col-xs-24 p-0 hidden-xs home-jem-bg box">
@@ -1563,23 +1530,20 @@
                                 Yishun Ave 2, North Wing, <br />
                                 #01-22 Northpoint City S769098</p>
 
-                            <p class="mb-2"> Monday - Thursday: 11am - 9pm
-
+                            <p class="mb-2"> Monday - Thursday: 11am - 9pm<br />
+                                <span class="h9"> (Last appointment at 8pm) </span>
                             </p>
 
-                            <p class="mb-2"> Friday - Sunday: 11am - 9.30pm
-
+                            <p class="mb-2"> Friday - Sunday: 11am - 9.30pm<br />
+                                <span class="h9"> (Last appointment at 8.30pm) </span>
                             </p>
 
                             <p class="mb-3">
                                 Call: <a href="tel:+6569691492">+65 6969 1492</a>
                             </p>
                             <a href="{{store url='make-an-appointment?location=np'}}"
-                                class="btn btn-blue small-btn mb-3">Book
+                                class="btn btn-blue small-btn">Book
                                 Now</a>
-
-                            <div class="h13"> *Last appointment will be 1 hour before closing!
-                            </div>
                         </div>
                     </div>
                 </div>
