--- a/landing_pages/location.html
+++ b/landing_pages/location.html
@@ -423,6 +423,7 @@
                 font-size: 14px;
                 line-height: 15px;
                 /* height: 30px; */
+                width: 100%;
             }
 
             .large-btn {
@@ -679,6 +680,7 @@
             .tanjong-bg,
             .np-bg {
                 background-image: none;
+                min-height: auto;
             }
 
         }
@@ -699,7 +701,7 @@
                                 class="w-100 visible-xs">
                         </div>
                     </div>
-                    <div class="col-sm-12 box px-5 py-5">
+                    <div class="col-sm-12 box px-4 py-5">
                         <div class="text-left">
                             <h3 class="mb-3 ">TANJONG PAGAR</h3>
                             <p class="h9 mb-3">
@@ -707,7 +709,7 @@
                                 91 Tanjong Pagar Road<br />
                                 Singapore 088512<br />
                                 Monday - Sunday: 12pm - 8.30pm<br />
-                                (Last appointment at 7:30pm)
+
                             </p>
 
                             <p class="h9">
@@ -715,9 +717,16 @@
 
                                 Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
                             </p>
-                            <div class="py-3">
-                                <a href="{{store url='make-an-appointment?location=tp'}}"
-                                    class="btn btn-blue large-btn">Schedule An Appointment </a>
+                            <div class="py-3 only-sg">
+                                <a href="{{store url='make-an-appointment'}}" class="btn btn-blue large-btn">Schedule An
+                                    Appointment </a>
+                            </div>
+                            <div class="py-3 only-my">
+                                <a href="{{store url='make-an-appointment'}}" class="btn btn-blue large-btn">Schedule A
+                                    Virtual Appointment </a>
+                            </div>
+
+                            <div class="h13"> *Last appointment will be 1 hour before closing!
                             </div>
 
                         </div>
@@ -732,16 +741,16 @@
                                 class="w-100 visible-xs">
                         </div>
                     </div>
-                    <div class="col-sm-12 box px-5 py-5">
+                    <div class="col-sm-12 box px-4 py-5">
                         <div class="text-left">
                             <h3 class="mb-3 ">JEM</h3>
                             <p class="h9 mb-3">
                                 50 Jurong Gateway Rd, #01-60,<br />
                                 Singapore 608549 <br />
                                 Monday - Thursday: 11am - 9pm <br />
-                                (Last appointment at 8pm) <br />
+
                                 Friday - Sunday: 11am - 9.30pm <br />
-                                (Last appointment at 8.30pm)
+
                             </p>
 
                             <p class="h9">
@@ -749,9 +758,16 @@
 
                                 Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
                             </p>
-                            <div class="py-3">
-                                <a href="{{store url='make-an-appointment?location=jem'}}"
-                                    class="btn btn-blue large-btn">Schedule An Appointment </a>
+                            <div class="py-3 only-sg">
+                                <a href="{{store url='make-an-appointment'}}" class="btn btn-blue large-btn">Schedule An
+                                    Appointment </a>
+                            </div>
+                            <div class="py-3 only-my">
+                                <a href="{{store url='make-an-appointment'}}" class="btn btn-blue large-btn">Schedule A
+                                    Virtual Appointment </a>
+                            </div>
+
+                            <div class="h13"> *Last appointment will be 1 hour before closing!
                             </div>
 
                         </div>
@@ -769,7 +785,7 @@
                                 class="w-100 visible-xs">
                         </div>
                     </div>
-                    <div class="col-sm-12 box px-5 py-5">
+                    <div class="col-sm-12 box px-4 py-5">
                         <div class="text-left">
                             <h3 class="mb-3 ">NORTHPOINT CITY</h3>
                             <p class="h9 mb-3">
@@ -777,9 +793,9 @@
                                 Yishun Ave 2, North Wing, #01-22 Northpoint City<br />
                                 Singapore 769098<br />
                                 Monday - Thursday: 11am - 9pm<br />
-                                (Last appointment at 8pm)<br />
+
                                 Friday - Sunday: 11am - 9.30pm<br />
-                                (Last appointment at 8.30pm)
+
                             </p>
 
                             <p class="h9">
@@ -787,9 +803,16 @@
 
                                 Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
                             </p>
-                            <div class="py-3">
-                                <a href="{{store url='make-an-appointment?location=np'}}"
-                                    class="btn btn-blue large-btn">Schedule An Appointment </a>
+                            <div class="py-3 only-sg">
+                                <a href="{{store url='make-an-appointment'}}" class="btn btn-blue large-btn">Schedule An
+                                    Appointment </a>
+                            </div>
+                            <div class="py-3 only-my">
+                                <a href="{{store url='make-an-appointment'}}" class="btn btn-blue large-btn">Schedule A
+                                    Virtual Appointment </a>
+                            </div>
+
+                            <div class="h13"> *Last appointment will be 1 hour before closing!
                             </div>
 
                         </div>
