--- a/landing_pages/sg/custom.html
+++ b/landing_pages/sg/custom.html
@@ -660,7 +660,7 @@
         }
 
         .recent-custom img:hover {
-            transform: scale(1.5);
+            transform: scale(1.2);
         }
 
         .process-icon {
@@ -792,19 +792,19 @@
                 <div class="row flex-wrap">
                     <div class="col-xs-8 col-sm-8 mb-3">
                         <div class="w-100 overflow-hidden">
-                            <img src="https://www.michaeltrio.com/pub/media/0custompage/2---WR0148F-1L-18KW-RM15848.jpg"
-                                alt="" class="img-responsive w-100" />
-                        </div>
-                    </div>
-                    <div class="col-xs-8 col-sm-8 mb-3">
-                        <div class="w-100 overflow-hidden">
-                            <img src="https://www.michaeltrio.com/pub/media/0custompage/3---MSR0085-RM17201.jpg" alt=""
+                            <img src="https://www.michaeltrio.com/pub/media/0custompage/1.jpg" alt=""
                                 class="img-responsive w-100" />
                         </div>
                     </div>
                     <div class="col-xs-8 col-sm-8 mb-3">
                         <div class="w-100 overflow-hidden">
-                            <img src="https://www.michaeltrio.com/pub/media/0custompage/5---WR0144-DSC04397.jpg" alt=""
+                            <img src="https://www.michaeltrio.com/pub/media/0custompage/2.jpg" alt=""
+                                class="img-responsive w-100" />
+                        </div>
+                    </div>
+                    <div class="col-xs-8 col-sm-8 mb-3">
+                        <div class="w-100 overflow-hidden">
+                            <img src="https://www.michaeltrio.com/pub/media/0custompage/3.jpg" alt=""
                                 class="img-responsive w-100" />
                         </div>
                     </div>
@@ -815,23 +815,23 @@
 
         <section class="recent-custom my-5 mobile-show">
             <div class="container">
-                <h1 class="text-center  mb-4">Recent Customization Rating & Reviews</h1>
+                <h1 class="text-center  mb-4">Recent Customisation Rating & Reviews</h1>
                 <div class="row flex-wrap">
                     <div class="col-xs-24 col-sm-8 mb-3">
                         <div class="w-100 overflow-hidden">
-                            <img src="https://www.michaeltrio.com/pub/media/0custompage/2---WR0148F-1L-18KW-RM15848.jpg"
-                                alt="" class="img-responsive w-100" />
-                        </div>
-                    </div>
-                    <div class="col-xs-24 col-sm-8 mb-3">
-                        <div class="w-100 overflow-hidden">
-                            <img src="https://www.michaeltrio.com/pub/media/0custompage/3---MSR0085-RM17201.jpg" alt=""
+                            <img src="https://www.michaeltrio.com/pub/media/0custompage/1.jpg" alt=""
                                 class="img-responsive w-100" />
                         </div>
                     </div>
                     <div class="col-xs-24 col-sm-8 mb-3">
                         <div class="w-100 overflow-hidden">
-                            <img src="https://www.michaeltrio.com/pub/media/0custompage/5---WR0144-DSC04397.jpg" alt=""
+                            <img src="https://www.michaeltrio.com/pub/media/0custompage/2.jpg" alt=""
+                                class="img-responsive w-100" />
+                        </div>
+                    </div>
+                    <div class="col-xs-24 col-sm-8 mb-3">
+                        <div class="w-100 overflow-hidden">
+                            <img src="https://www.michaeltrio.com/pub/media/0custompage/3.jpg" alt=""
                                 class="img-responsive w-100" />
                         </div>
                     </div>
