--- a/success.html
+++ b/success.html
@@ -179,19 +179,27 @@
 <body>
     <div class="mt2021">
         <section>
-            <div class="container">
-                <h3 class="mb-4"> Thank You For Requesting A Ring Sizer</h3>
-                <p class="mb-3"> We're sending you more information email.
+            <div class="container text-center py-5" style="max-width: 800px; margin:auto;">
+
+
+                <h3 class="mb-4"> Ring Sizer Request Received! </h3>
+
+                <p class="mb-0"> Thank you for registering your interest in our complimentary ring sizer.
+                    For customers residing in Singapore, please allow 3-7 working days for the ring sizer to reach you.
+                    International customers may expect the ring sizer to reach you within 1-3 weeks.
                 </p>
-                <p class="mb-3"> Michael Trio would be glad to send you a free plastic ring sizer. </p>
-                <p class="mb-3">
-                    <strong> Please Note:</strong> <br />
+
+
+
+
+                <!--  <p class="mb-3">
+                 <strong> Please Note:</strong> <br />
                     Ring sizers are only available to customer living in Singapore. International customers should use
                     our printable <a href="https://d213t4exkgxsjh.cloudfront.net/assets/images/ring-sizer-chart.pdf"
                         target="_blank" class="ablue">ring sizer</a> .
                 </p>
                 <img src="https://www.michaeltrio.com/pub/media/wysiwyg/icotheme/ring_size.jpg" alt=""
-                    class="img-responsive">
+                    class="img-responsive"> -->
             </div>
         </section>
     </div>
