--- a/landing_pages/about.html
+++ b/landing_pages/about.html
@@ -205,6 +205,10 @@
             max-width: 600px;
         }
 
+        .max-width-700 {
+            max-width: 700px;
+        }
+
         .d-sm-flex {
             display: flex;
         }
@@ -523,6 +527,14 @@
             font-size: 22px;
         }
 
+        .mt2021 h5.text-blue-title {
+            color: #9BB8D3;
+            font-size: 32px;
+            line-height: 39px;
+            text-transform: uppercase;
+            font-weight: 300;
+        }
+
         .mt2021 h6 {
             font-size: 17px;
         }
@@ -641,16 +653,20 @@
         }
 
         .couple-img-1 {
-            margin-top: -100px;
-            margin-bottom: 50px;
-            margin-left: 10%;
-            width: 80%;
+            margin-top: -150px;
+            /* margin-bottom: 50px; */
+            /* margin-left: 10%; */
+            width: 60%;
+        }
+
+        .girl-img-1 {
+            width: 67%;
         }
 
         h3.text-lightorange {
-            font-size: 50px;
-            color: #FFB493;
-            font-weight: 600;
+            font-size: 38px;
+            color: #FFCDB6;
+            font-weight: 300;
             line-height: 1.2em;
         }
 
@@ -668,7 +684,7 @@
 
         .bg-green {
             background-color: #92BAAE;
-            min-height: 300px;
+            /* min-height: 300px; */
         }
 
         .bg-green .h3 {
@@ -680,6 +696,7 @@
         .about-large-wrapper {
             max-width: 650px;
         }
+
 
         @media (max-width:991.98px) {
             h3.text-lightorange {
@@ -807,8 +824,8 @@
 
                     <img src="https://www.michaeltrio.com/pub/media/0about/L1.jpg" alt="" class="w-100 visible-480">
 
-                    <div class="col-md-8 col-sm-10">
-                        <div>
+                    <div class="col-md-12 col-sm-12">
+                        <div class="text-center">
                             <img src="https://www.michaeltrio.com/pub/media/0about/P1.jpg" alt=""
                                 class=" couple-img-1 hidden-xs">
                             <img src="https://www.michaeltrio.com/pub/media/0about/L1.jpg" alt=""
@@ -816,10 +833,10 @@
 
                         </div>
                     </div>
-                    <div class="col-ms-16 col-sm-14 box">
+                    <div class="col-ms-12 col-sm-12 box">
                         <div class="pl-xs-7 pb-xs-5 pt-480-5">
                             <h3 class="text-left text-white">Every love has a story</h3>
-                            <h3 class="text-left text-lightorange pt-4">Make yours one that stands the test of time.
+                            <h3 class="text-left text-lightorange pt-2">Make yours one that stands the test of time.
                             </h3>
                         </div>
                     </div>
@@ -840,32 +857,44 @@
         <section>
             <div class="container">
                 <div class="row">
+                    <div class="col-md-24">
+                        <p class="pb-5 max-width-700 m-auto">
+                            How we conduct our business makes it possible for us to make a quality jewellery
+                            piece
+                            faster and at a lower cost, efficiencies we pass on to you and that you benefit
+                            from.
+                        </p>
+                    </div>
+                </div>
 
-                    <div class="col-md-12 col-sm-10 pl-0 box hidden-xs">
+                <div class="row">
+
+                    <div class="col-md-12 col-sm-10 pl-0 box hidden-xs" style="align-items: flex-start;">
                         <div>
-                            <img src="https://www.michaeltrio.com/pub/media/0about/P2.jpg" alt="" class="w-100 m-auto">
+                            <img src="https://www.michaeltrio.com/pub/media/0about/P2.jpg" alt=""
+                                class="girl-img-1 m-auto">
                         </div>
                     </div>
                     <div class="col-md-12 col-sm-14 box">
                         <div class="text-left">
-                            <div>
+                            <!-- <div>
                                 <p class="mb-3">
                                     How we conduct our business makes it possible for us to make a quality jewellery
                                     piece
                                     faster and at a lower cost, efficiencies we pass on to you and that you benefit
                                     from.
                                 </p>
-                            </div>
-                            <div class="mt-3">
-                                <h5 class="mb-3">
+                            </div> -->
+                            <div class="mt-0">
+                                <h5 class="mb-3 text-blue-title">
 
                                     When High Standards Meet Sincere Paragmatism
                                 </h5>
                                 <div class=" visible-xs mb-3">
                                     <img src="https://www.michaeltrio.com/pub/media/0about/L2.jpg" alt=""
-                                        class="w-100 m-auto ">
+                                        class="w-100  m-auto ">
                                 </div>
-                                <p class="mb-3">
+                                <p class="mb-5">
                                     We make our own jewellery, which means we do not stock large inventories, nor are
                                     subject to
                                     the prices and timetables of third party producers
@@ -873,11 +902,11 @@
                             </div>
 
                             <div class="mt-3">
-                                <h5 class="mb-3">
+                                <h5 class="mb-3 text-blue-title">
 
                                     Love Doesn't Have To Wait
                                 </h5>
-                                <p class="mb-3">
+                                <p class="mb-5">
                                     Jewellery retailers are able to furnish an engagement ring with little to no custom
                                     work
                                     in three to six months. We are proud to say that customising an engagement ring for
@@ -890,11 +919,11 @@
                             </div>
 
                             <div class="mt-3">
-                                <h5 class="mb-3">
+                                <h5 class="mb-3 text-blue-title">
 
                                     Or Sacrifice
                                 </h5>
-                                <p class="mb-3">
+                                <p class="mb-5">
                                     Our diamond stones are competitively priced at 20 to 40 per cent less than others on
                                     the
                                     market. This does not mean they are of lesser quality. On the contrary, we provide
@@ -929,7 +958,7 @@
 
         <section>
             <div class="container mb-5">
-                <div class="row">
+                <div class="row pt-5">
                     <div class=" visible-xs mb-5">
                         <img src="https://www.michaeltrio.com/pub/media/0about/L3.jpg" alt="" class="w-100 m-auto ">
                     </div>
@@ -958,8 +987,9 @@
                         </div>
                     </div>
                     <div class="col-sm-12 pr-0">
-                        <div class="hidden-xs">
-                            <img src="https://www.michaeltrio.com/pub/media/0about/P3.jpg" alt="" class="w-100 m-auto ">
+                        <div class="hidden-xs text-center">
+                            <img src="https://www.michaeltrio.com/pub/media/0about/P3.jpg" alt=""
+                                class="girl-img-1 m-auto ">
                         </div>
                     </div>
                 </div>
